# svg-tree

./: .gitignore  .travis.yml  Makefile  PathParser.hs  README.md  changelog  changelog.md  out.txt  reanimate-svg.cabal  svg-tree.cabal  svg.cabal
exec-src/: benching.hs  svgrender.hs
executable/: Main.hs
ml_ref/: svg.ml  svg.mli  svgpathlexer.mll  svgpathparser.mly
src/Graphics/: Svg.hs
src/Graphics/Svg/: ColorParser.hs  CssParser.hs  CssTypes.hs  NamedColors.hs  PathConverter.hs  PathParser.hs  RasterificRender.hs  RasterificTextRendering.hs  RenderContext.hs  Types.hs  XmlParser.hs
test/: PathParserSpec.hs
