name:                reanimate-svg
version:             0.7.0.0
synopsis:            SVG file loader and serializer
description:
  svg-tree provides types representing a SVG document,
  and allows to load and save it.
  .
  The types definition are aimed at rendering,
  so they are rather comple. For simpler SVG document building,
  look after `lucid-svg`.
  .
  To render an svg document you can use the `rasterific-svg` package


license:             BSD3
author:              Vincent Berthoux, David Himmelstrup
maintainer:          David Himmelstrup <lemmih@gmail.com>
-- copyright:
category:            Graphics, Svg
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: changelog.md

Source-Repository head
    Type:      git
    Location:  git://github.com/lemmih/reanimate-svg.git

library
  hs-source-dirs: src
  Ghc-options: -O3 -Wall
  default-language: Haskell2010
  exposed-modules: Graphics.Svg
                 , Graphics.Svg.CssTypes
                 , Graphics.Svg.Types
                 , Graphics.Svg.PathParser
                 , Graphics.Svg.NamedColors

  other-modules: Graphics.Svg.XmlParser
               , Graphics.Svg.CssParser
               , Graphics.Svg.ColorParser

  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
  else
    -- provide/emulate `Control.Monad.Fail` and `Data.Semigroups` API for pre-GHC8
    build-depends: fail == 4.9.*, semigroups == 0.18.*

  build-depends: base >= 4.5 && < 6
               , JuicyPixels >= 3.2
               , attoparsec >= 0.12
               , scientific >= 0.3
               , containers >= 0.4
               , xml        >= 1.3
               , bytestring >= 0.10
               , linear     >= 1.20
               , vector     >= 0.10
               , text       >= 1.1
               , transformers >= 0.3 && < 0.6
               , mtl        >= 2.1 && < 2.3
               , lens       >= 4.6 && < 5

test-suite test
  hs-source-dirs: test
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends: base
               , svg-tree
               , attoparsec >= 0.12
               , scientific >= 0.3
               , linear     >= 1.20
               , hspec
  ghc-options: -Wall -threaded
  other-modules: PathParserSpec
